--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <form autocomplete="">
+        <form autocomplete="" class="form1">
             <h2 class="text-center"><b>Sign Up</b></h2>
 
             <label>Username</label>
@@ -25,7 +25,7 @@
             <input type="password" name="cpassword" placeholder="Confirm your password" required>
 
             <div class="bottom-area">
-                <p id="ex">Do you have an account? <a href="#" id="login">Login</a></p>
+                <p class="ex">Do you have an account? <a href="login.html" class="login">Login</a></p>
 
                 <button type="submit" class="sign-btn">Sign Up</button>
             </div>
